Fix spacing

--- a/src/components/Input.scss
+++ b/src/components/Input.scss
@@ -3,4 +3,7 @@
 	padding: 12px 24px;
 	display: block;
 	outline: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
