--- a/src/pages/landing/LandingSection4.scss
+++ b/src/pages/landing/LandingSection4.scss
@@ -1,3 +1,5 @@
+@import '../../assets/scss/mixins';
+
 .landing-section-4 {
 	display: flex;
 	flex-direction: column;
@@ -41,9 +43,8 @@
 	}
 
 	&__selection-group {
-		display: flex;
-		justify-content: center;
-		flex-wrap: wrap;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
 		grid-gap: 30px;
 	}
 
@@ -60,6 +61,7 @@
 			background-color: var(--secondary-color);
 			color: var(--light-color);
 		}
+
 	}
 
 	&__square-info {
@@ -76,5 +78,17 @@
 		bottom: 5px;
 		font-weight: bold;
 		font-size: 20px;
+	}
+
+	@include up-to-medium-large {
+		&__selection-group {
+			grid-template-columns: 1fr 1fr;
+		}
+	}
+
+	@include up-to-small {
+		&__selection-group {
+			grid-template-columns: 1fr;
+		}
 	}
 }
